# agent-template-adk

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  Makefile  PAAL-200-summary-of-traceparent-findings.txt  README.md  compose.yml  main.py  pyproject.toml
.github/workflows/: check.yml  publish.yml  push.yml
tests/agents/: analyzer.env  data-gatherer.env  research-coordinator.env
