[project]
name = "agent-template-adk"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "agentic-layer-sdk-adk>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py"
]

# Comment-in to activate local development path to the ADK package
#[tool.uv.sources]
#agentic-layer-sdk-adk = { path = "../sdk-python/adk", editable = true }
