[project]
name = "agent-template-adk"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "agentic-layer-sdk-adk>=0.7.2",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "mypy[reports]>=1.12.0,<2",
    "ruff>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py"
]

# Comment-in to activate local development path to the ADK package
#[tool.uv.sources]
#agentic-layer-sdk-adk = { path = "../sdk-python/adk", editable = true }


[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
# I001 --> enable import sorting rules
# Q --> enable flake8-quotes rules for consistent quote style
# N --> pep8-naming for proper naming conventions
# PT --> flake8-pytest-style for pytest best practices
# TID251 --> banned relative imports
# DTZ --> datetime timezone awareness
extend-select = ["Q", "N", "I001", "PT", "TID251", "DTZ"]


[tool.bandit]
exclude_dirs = [".venv"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*test_*.py"]


[tool.mypy]
strict = true
